syntax = "proto3";

package services;

import "google/protobuf/empty.proto";

// Kategorie
message Category {
  int32 id_category = 1;
  string name = 2;
  string main_category = 3;
  string description = 4;
}

message CategoryRequest {
  int32 id_category = 1;
}

message ListCategoriesRequest {
  string name_contains = 1;
}

message CategoriesResponse {
  repeated Category categories = 1;
}

message AddCategoryRequest {
  string name = 1;
  string main_category = 2;
  string description = 3;
}

message DeleteCategorRequest{
  int32 id_category = 1;
}

message DeleteCategoryResponse {
  int32 id_category = 1;
  string name = 2;
  string main_category = 3;
  string description = 4;
}

message UpdateCategoryRequest {
  int32 id_category = 1;
  string name = 2;
  string main_category = 3;
  string description = 4;
}

message UpdateCategoryResponse {
  int32 id_category = 1;
  string name = 2;
  string main_category = 3;
  string description = 4;
}

// Produkty
message Product {
  int32 id = 1;
  string name = 2;
  int32 category_id = 3;
  int32 id_supplier = 4;
  NutritionalValues nutritional_values = 5;
}

message FullProduct {
  int32 id = 1;
  string name = 2;
  Category category_id = 3;
  Supplier id_supplier = 4;
  NutritionalValues nutritional_values = 5;
}

message NutritionalValues {
  float carbohydrates = 1;
  float proteins = 2;
  float fats = 3;
}

message ProductRequest {
  int32 id = 1;
}

message ListProductsRequest {
  string name_contains = 1;
  int32 category_id = 2; 
  float min_carbohydrates = 3;
  float max_carbohydrates = 4; 
  float min_proteins = 5;
  float max_proteins = 6;
  float min_fats = 7;
  float max_fats = 8;
  int32 limit = 9;
  int32 offset = 10;
  string sort_by = 11; 
  string sort_order = 12;

}

message AddProductRequest {
  string name = 1;
  int32 category_id = 2;
  int32 supplier_id = 3;
  NutritionalValues nutritional_values = 4;
}

message ProductsResponse {
  repeated Product products = 1;
}

message DeleteProductRequest{
  int32 id = 1;
}

message DeleteProductResponse {
  int32 id = 1;
  string name = 2;
  int32 category_id = 3;
  int32 id_supplier = 4;
  NutritionalValues nutritional_values = 5;
}

message UpdateProductRequest {
  int32 id = 1; 
  string name = 2; 
  int32 category_id = 3; 
  int32 id_supplier = 4; 
  NutritionalValues nutritional_values = 5; 
}

message UpdateProductResponse {
  int32 id = 1;
  string name = 2;
  int32 category_id = 3;
  int32 id_supplier = 4;
  NutritionalValues nutritional_values = 5;
}

// Dostawcy
message Supplier {
  int32 id_supplier = 1;
  string name = 2;
  ContactInfo contact_info = 3;
  float rating = 4;
}
message ContactInfo{
  string address = 1;
  string phone = 2;
}

message SupplierRequest {
  int32 id_supplier = 1;
}

message ListSuppliersRequest {
  float min_rating = 1;
  float max_rating = 2;
  string sort_by = 3;
  string sort_order = 4;
}

message SuppliersResponse {
  repeated Supplier suppliers = 1;
}

message AddSupplierRequest {
  string name = 1;
  ContactInfo contact_info = 2;
  float rating = 3;
}

message DeleteSupplierRequest{
  int32 id_supplier = 1;
}

message DeleteSupplierResponse {
  int32 id_supplier = 1;
  string name = 2;
  ContactInfo contact_info = 3;
  float rating = 4;
}

message UpdateSupplierRequest {
  int32 id_supplier = 1;
  string name = 2;
  ContactInfo contact_info = 3;
  float rating = 4;
}

message UpdateSupplierResponse {
  int32 id_supplier = 1;
  string name = 2;
  ContactInfo contact_info = 3;
  float rating = 4;
}

// Serwisy
service CategoryService {
  rpc ListCategories(ListCategoriesRequest) returns (CategoriesResponse);
  rpc GetCategoryById(CategoryRequest) returns (Category);
  rpc addCategory(AddCategoryRequest) returns (Category);
  rpc deletedCategory(DeleteCategorRequest) returns (DeleteCategoryResponse);
  rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse);
}

service ProductService {
  rpc ListProducts(ListProductsRequest) returns (ProductsResponse);
  rpc getFullProductById(ProductRequest) returns (FullProduct);
  rpc GetProductById(ProductRequest) returns (Product);
  rpc AddProduct(AddProductRequest) returns (Product);
  rpc deletedProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
}

service SupplierService {
  rpc ListSuppliers(ListSuppliersRequest) returns (SuppliersResponse);
  rpc GetSupplierById(SupplierRequest) returns (Supplier);
  rpc addSupplier(AddSupplierRequest) returns (Supplier);
  rpc deletedSupplier(DeleteSupplierRequest) returns (DeleteSupplierResponse);
  rpc updateSupplier(UpdateSupplierRequest) returns (UpdateSupplierResponse);
}